# shopdesk-support

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENTERPRISE_ROADMAP.md  LICENSE  PRODUCT_ROADMAP.md  README.md  alembic.ini  docker-compose.yml  main.py  project-tree.txt  pyproject.toml  requirements.txt  sec.py
alembic/: env.py
alembic/versions/: 06d1449b2894_added_user_fields_and_fixed_ticket_.py  21559518abf0_setting_up_on_the_asus_laptop.py  37301fafb676_added_role_column_to_the_users_table.py  796b86d0abba_initial_migration.py  84232868d6b5_added_hashed_password_column_to_the_.py  99f1c2182e4b_added_default_value_to_role_colum_in_.py  add_admin_role.py  add_session_rating.py  add_ticket_assignment.py  caff9653c9ca_fixed_the_fault_in_the_database_schema.py
app/: __init__.py  config.py  dependencies.py  tools.py
app/agent/: __init__.py  orchestrator.py  rag_chain.py  router.py
app/auth/: dependencies.py  jwt.py  password.py
app/db/: __init__.py  database.py  models.py  seed.py
app/memory/: __init__.py  base.py  long_term.py  short_term.py
app/routes/: analytics.py  auth.py  chat.py  knowledge.py  orders.py  queue.py  sessions.py  user.py
app/schemas/: __init__.py  auth.py  chat.py  queue.py  user.py
app/utils/: __init__.py  load_prompt.py  logger.py  rate_limiting.py  vector_id.py
app/vectorstore/: __init__.py  base.py  ingest.py  pinecone.py  pinecone_client.py
assets/: architecture-diagram.txt
knowledge-base/: faqs.md
prompts/: rag-prompt.md  router.md  tool-call.md
tests/: conftest.py  test_document_factory.py  test_load_prompt.py  test_orchestrator.py  test_pinecone.py  test_rag_chain.py  test_router.py  test_tools.py
tests/unit/: test_database_seed.py  test_vector_id.py
